--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/HiddenTitleTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ContentActivity"></activity>
+        <activity android:name=".activity.ContentActivity"/>
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +30,26 @@
             android:windowSoftInputMode="stateHidden"
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"/>
+        <receiver android:name=".broadcastreceivers.NetworkChangeReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".broadcastreceivers.DoNotStopInternetService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="RestartServiceWhenStopped">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>
+        <service android:enabled="true" android:exported="true" android:name=".services.MyInternetCheckAvailabilityService" />
+        <service android:enabled="true" android:exported="true" android:permission="android.permission.BIND_JOB_SERVICE"  android:name=".services.MyInternetJobService" />
+
     </application>
 
 </manifest>
