--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
-        versionName "0.5.0-b"
+        versionName "0.5.5-b"
 
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -31,6 +31,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
