--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
     //Toasty
-    implementation 'com.github.GrenderG:Toasty:1.5.2'
+//    implementation 'com.github.GrenderG:Toasty:1.5.2'
 
     // QR code
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
