--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dev.visum.demoapp">
+    package="dev.visum.demoapp" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,10 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/HiddenTitleTheme"
-        android:usesCleartextTraffic="true">
-        android:requestLegacyExternalStorage="true"
-        <activity android:name=".activity.ContentActivity"/>
-        <activity android:name=".activity.LoginActivity">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".activity.InvoiceActivity"
+            android:exported="true" />
+        <activity android:name=".activity.ContentActivity" />
+        <activity android:name=".activity.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,12 +30,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:windowSoftInputMode="stateHidden"
             android:name=".activity.MainActivity"
-            android:label="@string/title_activity_main"/>
-        <receiver android:name=".broadcastreceivers.NetworkChangeReceiver"
+            android:label="@string/title_activity_main"
+            android:windowSoftInputMode="stateHidden" />
+
+        <receiver
+            android:name=".broadcastreceivers.NetworkChangeReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
@@ -42,15 +46,22 @@
             android:name=".broadcastreceivers.DoNotStopInternetService"
             android:enabled="true"
             android:exported="true"
-            android:label="RestartServiceWhenStopped">
+            android:label="RestartServiceWhenStopped" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
-        <service android:enabled="true" android:exported="true" android:name=".services.MyInternetCheckAvailabilityService" />
-        <service android:enabled="true" android:exported="true" android:permission="android.permission.BIND_JOB_SERVICE"  android:name=".services.MyInternetJobService" />
 
+        <service
+            android:name=".services.MyInternetCheckAvailabilityService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".services.MyInternetJobService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
